Fix random artifacts when undoing brush strokes

It looks like making indirect painting merge multithreaded
revealed a very old race condition in the tiles data manager.
The extent of the memento should be calculated in a synchronous
way.

BUG:453243